Edited travis to push up local database

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ script:
 - bundle exec rspec
 before_script:
 - bundle exec rake db:create
+- heroku pg:reset
+- heroku pg:push music_shop_development DATABASE_URL --app musicemporium
 bundler_args: "--binstubs=./bundler_stubs"
 deploy:
   provider: heroku
