--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
 - bundle exec brakeman --exit-on-warn --quiet -f plain
 - bundle exec rubycritic app lib config --minimum-score 95 --mode-ci --no-browser
 before_script:
+- bundle exec rake db:create
 - RAILS_ENV=test bundle exec rake db:migrate --trace
 - bundle exec rake db:test:prepare
 bundler_args: "--binstubs=./bundler_stubs"
